2003-03-11  Fumitoshi UKAI  <ukai@debian.or.jp>	
	
	* which: deleted
	* makeallmomdel: deleted

2003-03-11  Fumitoshi UKAI  <ukai@debian.or.jp>	

	* [w3m-dev 03804] fix autoconf
	* acinclude.m4 (AC_W3M_MENU): default enabled
			(AC_W3M_MOUSE): default enabled
			(AC_W3M_COOKIE): default enabled
			(AC_W3M_LANG): can't detect locale here.
				autoconf set LANG=C
			(AC_W3M_DIGEST_AUTH): default enabled
			(AC_W3M_SSL): default enabled
	* configure.in (AC_W3M_DIGEST_AUTH): added

2003-03-11  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev 03804] fix autoconf
	* config.h.in (EAMCS_LIKE_LINEEDIT): define
		(VI_PREC_NUM): define
		(USE_MARK): define
		(LABEL_TOPLINE): define
		(NEXTPAGE_TOPLINE): define
		(FTPPASS_HOSTNAMEGEN): define
		(SHOW_PARAMS): define
		(VIEW_UNSEENOBJECTS): define
		(ID_EXT): define

2003-03-11  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev 03804] fix autoconf
	* acinclude.m4 (AC_W3M_MODEL): deleted
		(AC_W3M_COLOR): default enable
		(AC_W3M_ANSI_COLOR): default enable
		(AC_W3M_BG_COLOR): default enable
		(AC_W3M_SHOW_PARAMS): deleted
		(AC_W3M_DICT): default enable
		(AC_W3M_HISTORY): default enable
		(AC_W3M_VIEW_UNSEENOBJECTS): deleted
		(AC_W3M_FORMAT_NICE): deleted
		(AC_W3M_ID_EXT): deleted
		(AC_W3M_FTPPASS_HOSTNAMEGEN): deleted
		(AC_W3M_NNTP): default enabled
		(AC_W3M_LANG): autodetect whether japanese is enabled
		(AC_W3M_KANJI_SYMBOLS): default enabled
		(AC_W3M_EMACS_LIKE_LINEEDIT): deleted
		(AC_W3M_VI_PREC_NUM): deleted
		(AC_W3M_MARK): deleted
		(AC_W3M_LABEL_TOPLINE): deleted
		(AC_W3M_NEXTPAGE_TOPLINE): deleted
		(AC_W3M_SSL): fix without ssl
		(AC_W3M_IMAGE): default enabled
		(AC_W3M_XFACE): check uncompface
		(AC_W3M_IPv6): enable_ipv6 if inet6 lib found
	* configure.in (AC_PROG_CPP): added

2003-03-11  Yuji Abe <cbo46560@pop12.odn.ne.jp>

	* [w3m-dev 03803] fix autoconf
	* acinclude.m4 (AC_W3M_MIGEMO): add missing test
					needs quote
		(AC_W3M_SSL): delete x

2003-03-11  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>
