@@ -19,6 +19,9 @@ AC_CYGWIN
 AC_EXEEXT
 AC_SUBST(EXEEXT)
 
+AC_SUBST(W3M_TARGET)
+W3M_TARGET=$target
+AC_DEFINE_UNQUOTED(W3M_TARGET, $W3M_TARGET)
 AC_W3M_VERSION
 
 AC_W3M_LANG
